WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304715
grid-lanes items have the wrong containing block size in the stacking axis
https://bugs.webkit.org/show_bug.cgi?id=304715
Summary
grid-lanes items have the wrong containing block size in the stacking axis
fantasai
Reported
2025-12-26 18:21:52 PST
This is resulting in sizing errors such as
bug 303851
(auto-sizing) and
bug 303850
(percentage-sizing).
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-26 18:21:59 PST
<
rdar://problem/167221488
>
fantasai
Comment 2
2026-01-05 22:24:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56126
EWS
Comment 3
2026-01-08 16:45:53 PST
Committed
305319@main
(3bdeec83c5f5): <
https://commits.webkit.org/305319@main
> Reviewed commits have been landed. Closing PR #56126 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug